Began data flash integration. WIP

--- a/preferences.ini
+++ b/preferences.ini
@@ -1,6 +1,10 @@
 [startup]
 chipErase=1
 chipSeries=NuMicro M4
+config0=0xFF87FFFE
+config1=0x0003F000
+config2=0xFFFF5A5A
+config3=0xFFFFFFFF
 doContinue=1
 enableSemihosting=0
 imageOffset=
@@ -19,4 +23,4 @@ setPCRegister=0
 setStopAtMain=1
 symbolsOffset=
 targetChip=M480AE
-writeConfig=0
+writeConfig=1
