--- a/preferences.ini
+++ b/preferences.ini
@@ -7,20 +7,20 @@ config2=0xFFFF5A5A
 config3=0xFFFFFFFF
 doContinue=1
 enableSemihosting=0
-imageOffset=
-imageOffsetInFlash=
+imageOffset=0x
+imageOffsetInFlash=0x
 initOther=
 initResetEnable=1
 initResetType=init
 loadExecutable=0
 loadExecutableToFlash=1
 loadSymbols=1
-pcRegisterValue=
+pcRegisterValue=0x
 runOther=
 runResetEnable=1
 runResetType=init
 setPCRegister=0
 setStopAtMain=1
-symbolsOffset=
+symbolsOffset=0x
 targetChip=M480AE
 writeConfig=0
