--- a/preferences.ini
+++ b/preferences.ini
@@ -7,20 +7,20 @@ config2=0xFFFF5A5A
 config3=0xFFFFFFFF
 doContinue=1
 enableSemihosting=0
-imageOffset=0x
-imageOffsetInFlash=0x
+imageOffset=
+imageOffsetInFlash=
 initOther=
 initResetEnable=1
 initResetType=init
 loadExecutable=0
 loadExecutableToFlash=1
 loadSymbols=1
-pcRegisterValue=0x
+pcRegisterValue=
 runOther=
 runResetEnable=1
 runResetType=init
 setPCRegister=0
 setStopAtMain=1
-symbolsOffset=0x
+symbolsOffset=
 targetChip=M480AE
-writeConfig=0
+writeConfig=1
